修复英雄凯不识别，新增删除比赛功能

--- a/application/admin/view/readme/index.html
+++ b/application/admin/view/readme/index.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>比赛操作指南</h1>
+        <h1>上传比赛操作指南</h1>
 
         <div class="step" data-step="1">
             <h2>下载与上传.dem文件</h2>
