--- a/application/admin/view/matches/index.html
+++ b/application/admin/view/matches/index.html
@@ -1,3 +1,11 @@
+<style>
+    .hero_img{
+        width:41px;height:23px;border-radius:.25em 0 0 .25em;vertical-align: middle;
+    }
+    .player_name{
+        margin-right:5px;border-radius: 0 .25em .25em 0;font-size:100%;vertical-align: middle;display: inline-block;height: 23px;line-height: 19px;cursor: pointer;
+    }
+</style>
 <div class="panel panel-default panel-intro">
     {:build_heading()}
 
