--- a/application/admin/view/champion/edit.html
+++ b/application/admin/view/champion/edit.html
@@ -1,21 +1,21 @@
 <form id="edit-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Match_id')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('胜决比赛编号')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-match_id" data-rule="required" data-source="match/index" class="form-control selectpage" name="row[match_id]" type="text" value="{$row.match_id|htmlentities}">
+            <input id="c-win_match_id" class="form-control" name="row[win_match_id]" type="text" value="{$row.win_match_id|htmlentities}">
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Ti_name')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('败绝比赛编号')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-lose_match_id" class="form-control" name="row[lose_match_id]" type="text" value="{$row.lose_match_id|htmlentities}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Major名称')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-ti_name" data-rule="required" class="form-control" name="row[ti_name]" type="text" value="{$row.ti_name|htmlentities}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Team')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-team" data-rule="required" class="form-control" name="row[team]" type="text" value="{$row.team|htmlentities}">
         </div>
     </div>
     <div class="form-group layer-footer">
