--- a/application/admin/view/majorhistory/add.html
+++ b/application/admin/view/majorhistory/add.html
@@ -1,15 +1,9 @@
 <form id="add-form" class="form-horizontal" role="form" data-toggle="validator" method="POST" action="">
 
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('胜决比赛编号')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('比赛编号')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-win_match_id" class="form-control" name="row[win_match_id]" type="text">
-        </div>
-    </div>
-    <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('败绝比赛编号')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-lose_match_id" class="form-control" name="row[lose_match_id]" type="text">
+            <input id="c-match_id" data-rule="required" class="form-control" name="row[match_id]" type="text">
         </div>
     </div>
     <div class="form-group">
