计算选手加权胜率

--- a/application/admin/view/league/add.html
+++ b/application/admin/view/league/add.html
@@ -31,15 +31,25 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('报名费')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-status" data-rule="required" class="form-control" name="row[status]" type="number" value="1">
+            <input id="c-fee" class="form-control" name="row[fee]" type="text">
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-xs-12 col-sm-2">{:__('Create_time')}:</label>
+        <label class="control-label col-xs-12 col-sm-2">{:__('参赛选手')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-create_time" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[create_time]" type="text" value="{:date('Y-m-d H:i:s')}">
+            <select id="c-players" class="form-control selectpicker" name="row[players][]" data-live-search="true" multiple>
+                {foreach $playersList as $key => $value}
+                    <option value="{$value}">{$key}</option>
+                {/foreach}
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-status" data-rule="required" class="form-control" name="row[status]" type="number" value="1">
         </div>
     </div>
     <div class="form-group layer-footer">
