--- a/application/admin/view/league/edit.html
+++ b/application/admin/view/league/edit.html
@@ -31,6 +31,22 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('报名费')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-fee" data-rule="required" class="form-control" name="row[fee]" type="number" value="{$row.fee}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-xs-12 col-sm-2">{:__('参赛选手')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <select id="c-players" class="form-control selectpicker" name="row[players][]" data-live-search="true" multiple>
+                {foreach $playersList as $key => $value}
+                    <option value="{$value}" {in name="value" value="$selectedPlayers" }selected{/in}>{$key}</option>
+                {/foreach}
+            </select>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-status" data-rule="required" class="form-control" name="row[status]" type="number" value="{$row.status|htmlentities}">
